refactor: 1.엔티티의 toBuilder에 id 추가 2. likes 로직 수정 (likes+= -> postLikes.length()) 3. comments 저장 로직 변경에 따른 영속성 반영 여부의 변경으로 comment json 반환 로직 수정